# tfdiag

./: .gitignore  CMakeLists.txt  README.md  current.md  frames_2025-11-04_17.42.13.gv  package.xml  setup.cfg  setup.py
md/: IMPLEMENTATION_NOTES.md  current.md  ros2_cli_howto.md
ros2diag/: net_latency.py  ros2_params.py  ros2diag_help.py  tf_checker.py  tf_error_detector.py  tf_lister.py  tf_lister_accurate.py  tf_timechecker.py  tf_topics.py
test/: test_integration.py  test_main.py  test_tf_lister.py  test_tf_lister_accurate.py
tfdiag/: main.py  tf_checker.py  tf_lister.py  tf_timechecker.py  tf_topics.py
